refactor - replace code to MethodHandle